Fix footer being too light
Remove .site-info from dark theme block because it looks better with colors from light theme.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -598,20 +598,6 @@ body {
     color: #ffffff;
   }
 
-  .site-info {
-    color: #000000;
-    background-color: #dedede;
-  }
-
-  .site-info a,
-  .site-info a:visited {
-    color: #000000;
-  }
-
-  .site-info a:hover {
-    color: #9e9e9e;
-  }
-
   .footer-bar .widget_nav_menu .current-menu-item a {
     color: #9e9e9e;
   }
